--- a/index.html
+++ b/index.html
@@ -61,12 +61,20 @@
                 </div>
             </div>
             <div class="bottom-nav">
-
+                <div class="arrow">
+                    <a href="#"><img src="images/Vector%202.svg" alt=""></a>
+                </div>
+                <div class="social">
+                    <div class="container">
+                        <div class="icon"><img src="images/instagram-logo.svg" alt=""></div>
+                        <div class="icon"><img src="images/facebook-logo-button.svg" alt=""></div>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
 
 
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
